# otus_cpp_4

./: CMakeLists.txt  Doxyfile  build.sh  conanfile.txt  main.cpp  metafunctions.h  print_ip.h  sfinae.cpp  sfinae_sort.cpp
.github/workflows/: cmake-single-platform.yml
include/: metafunctions.hpp  pretty.h  print_ip.hpp
src/: main.cpp
